****************************************************************************

New features
------------

 - SomeClass, SomeOtherClass
    * New classes for foo, bar and baz

Optimizations
-------------

 - Optimized foo in QSomeClass
    * See list of Important Behavior Changes below


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------

 - foo
    * bar

QtGui
-----

 - foo
    * bar

QtDBus
------

 - foo
    * bar

QtNetwork
---------

 - foo
    * bar

QtOpenGL
--------

 - foo
    * bar

QtScript
--------

 - foo
    * bar

QtSql
-----

 - foo
    * bar

QtXml
-----

 - foo
    * bar

Qt Plugins
----------

 - foo
    * bar

Third party components
----------------------

 - Updated foo to version 2.3.9.

 - Updated bar to the latest version from baz.org.


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Unix (X11 and Mac OS X)
------------------------------

 - 

Qt for Linux/X11
----------------

 -

Qt for Windows
--------------

 -

Qt for Mac OS X
---------------

 -

Qt for Embedded Linux
---------------------

 -

DirectFB
--------

 -

Qt for Windows CE
-----------------

 -

****************************************************************************
*                          Tools                                           *
****************************************************************************

 - Designer
   * foo

 - qdoc3
   * bar

 - Linguist
   * baz

****************************************************************************
* Important Behavior Changes *
****************************************************************************

 -
