@@ -45,8 +45,12 @@ QtCore
 QtGui
 -----
 
- - foo
-    * bar
+ - QWidget
+    * [QTMOBILITY-645] Send WinIdChange event when winId is set to zero.
+	  The window handle of a native widget may be set to zero in two
+	  situations: (i) temporarily, during reparenting and (ii) during
+	  widget destruction.  Previously, no WinIdChange event was sent in
+	  either of these cases; now, it is sent in both cases.
 
 QtDBus
 ------
